--- a/portfolioindex.html
+++ b/portfolioindex.html
@@ -1,1 +1,9 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title> Jessica Laure Montabaranom </title>
+  </head>
+  <body>
+     xyz projects etc...
+  </body>
+  </html>
