basic info main page

--- a/portfolioindex.html
+++ b/portfolioindex.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title> Jessica Laure Montabaranom </title>
+
+  <head>
+
+  <title> Jessica Montabaranom </title>
+
   </head>
+
   <body>
-     xyz projects etc...
+    <div class="">
+
+     <h1> <p> <b> <center> Jessica Montabaranom </center> </b> </p> </h1>
+   </div>
+
+   <div class=""> <center>
+   Welcome to my portfolio website, where I have put together my past and <span class="marine"> current marine conservation related experiences</span>.
+   <br>
+     I am currently a 2nd year <span class="marine"> Marine Biology student </span> at the <b> University of Hull </b>.
+   <br>
+ </center>
+   </div>
+
   </body>
   </html>
