--- a/portfolioindex.html
+++ b/portfolioindex.html
@@ -10,43 +10,36 @@
   <link rel="stylesheet" href="index.css">
   <body>
     <div class="name">
-
+<br>
+<br>
      <h1> <p> <b> <center> Jessica Montabaranom </center> </b> </p> </h1>
+<br>
+<img src="IMG_1879.JPG" alt="Snorkelling on Mafia Island">
+<br>
+<br>
    </div>
 
-   <div class=""> <center>
+   <div class="current"> <center>
+     <br>
    <h2> <b> WORK IN PROGRESS </b> </h2> <br>
-   Welcome to my portfolio website, where I am putting together my past and <span class="marine"> current marine conservation related experiences</span>.
+   Please bear with me while this website is being created.
    <br>
-     I am currently a 2nd year <span class="marine"> Marine Biology student </span> at the <b> University of Hull </b>.
+   <br>
+   Welcome to my portfolio website, where I am putting together my past and current <span class="marine"> marine conservation related experiences</span>.
+   <br>
+     I am currently a 2nd year <span class="marine"> Marine Biology student </span> at the University of Hull.
+   <br>
+   <br>
+   <br>
    <br>
  </center>
-   </div>
 
-   <div class="dropdown">
-     <button onclick="myFunction()" class="dropbtn">Experiences</button>
-     <div id="myDropdown" class="dropdown-content">
-       <a href="tanzania.html">Tanzania</a><br>
-       <a href="crru.html">Scotland</a>
-    </div>
   </div>
+<div class="aboutme"> <center>
+<p>
 
-  <script>
-  function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
-  window.onclick = function(event) {
-    if (!event.target.matches('.dropbtn')) {
-      var dropdowns = document.getElementsByClassName("dropdown-content");
-      var i;
-      for (i = 0; i < dropdowns.length; i++) {
-        var openDropdown = dropdowns[i];
-        if (openDropdown.classList.contains('show')) {
-          openDropdown.classList.remove('show');
-        }
-      }
-    }
-  }
-  </script>
+  <a href="aboutme.html">About me</a></center> </p>
+  <br>
+</div>
   </body>
   </html>
