--- a/portfolioindex.html
+++ b/portfolioindex.html
@@ -12,7 +12,7 @@
     <div class="name">
 <br>
 <br>
-     <h1> <p> <b> <center> Jessica Montabaranom </center> </b> </p> </h1>
+     <h1> <p> <center> Jessica Montabaranom </center> </p> </h1>
 <br>
 <img src="IMG_1879.JPG" alt="Snorkelling on Mafia Island">
 <br>
@@ -35,11 +35,20 @@
  </center>
 
   </div>
-<div class="aboutme"> <center>
+<div> <center>
 <p>
 
   <a href="aboutme.html">About me</a></center> </p>
   <br>
+</div>
+<div> <center>
+  <p>
+
+    <a href="tanzania.html">Marine Conservation Research Assistant</a>
+    <br>
+    <br>
+    <a href="crru.html">Cetacean Research and Rescue Intern</a><br>
+  </p>
 </div>
   </body>
   </html>
