--- a/crru.html
+++ b/crru.html
@@ -3,3 +3,9 @@
 <head>
   <Title> CRRU, Scotland </title>
 </head>
+<link href="css/styles.css" rel="stylesheet">
+<link rel="stylesheet" href="index.css">
+<body>
+  <h2> <b> WORK IN PROGRESS </b> </h2> <br>
+</body>
+</html>
