--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Mafia Island, TZ</title>
+<title> About me </title>
 </head>
 <link href="css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
