--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <br>
      <h1> <p> <center> Jessica Montabaranom </center> </p> </h1>
 <br>
-<img src="IMG_1879.JPG" alt="Snorkelling on Mafia Island">
+<img src="IMG_1879.JPG">
 <br>
 <br>
    </div>
