--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="name">
 <br>
 <br>
-     <h1> <p> <center> Jessica Montabaranom </center> </p> </h1>
+     <h2> <p> <center> Jessica <br> Montabaranom </center> </p> </h2>
 <br>
 <img src="IMG_1879.JPG">
 <br>
@@ -35,19 +35,21 @@
  </center>
 
   </div>
-<div> <center>
+<div class="a"> <center>
 <p>
-
-  <a href="aboutme.html">About me</a></center> </p>
+     <br>
+     <br>
+     <br>
+  <a href="aboutme.html">A bit more about me</a></center> </p>
   <br>
 </div>
-<div> <center>
+<div class="a"> <center>
   <p>
 
-    <a href="tanzania.html">Marine Conservation Research Assistant</a>
+    <a href="experiences.html">My experiences</a>
     <br>
     <br>
-    <a href="crru.html">Cetacean Research and Rescue Intern</a><br>
+
   </p>
 </div>
   </body>
