--- a/aboutme.html
+++ b/aboutme.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> About me </title>
+<title> A bit more about me </title>
 </head>
+
 <link href="css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
+
 <body>
-  <h2> <b> WORK IN PROGRESS </b> </h2> <br>
+  <p> <div class ="name">
+    <br> A bit more about me <br>
+    <br>
+  <img src="IMG_3585.JPG">
+</p>
+</div>
+<div class="a">
+  My name is Jessica Montabaranom.
 </body>
 </html>
