--- a/aboutme.html
+++ b/aboutme.html
@@ -5,14 +5,14 @@
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="aboutme.css">
 
 <body>
-  <p> <div class ="name">
+  <p> <div> <center>
     <br> A bit more about me <br>
     <br>
   <img src="IMG_3585.JPG">
-</p>
+</p> </center>
 </div>
 <div class="a">
   My name is Jessica Montabaranom.
