centre landing page

--- a/landingpage.html
+++ b/landingpage.html
@@ -2,20 +2,26 @@
 <html lang="en">
 
   <head>
-
+<link rel="shortcut icon" href="K.png">
   <title> Jessica Montabaranom </title>
 
   </head>
   <link href="css/styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="landingpage".css">
+  <link rel="stylesheet" href="landingpage.css">
   <body>
+    <div class="container">
 
+      <img src="Jessica Montabaranom Student Marine Bioligist.png" class="image" style="width:100%" align="middle">
+    <div class="middle">
     <div class="a"> <center>
          <br>
          <br>
          <br>
-      <a href="index.html">Click here</a></center>
+     <a href="index.html">Welcome</a></center>
       <br>
     </div>
+    </div>
+    </div>
+
     </body>
     </html>
