--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
   <body>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="aboutme.html">About me</a>
+            </li>
+            <li class="nav-item">  <div class="dropdown">
+            <button class="dropbtn">Experiences</button>
+            <div class="dropdown-content">
+              <a href="tanzania.html">Tanzania</a>
+              <a href="crru.html">Scotland</a>
+              <a href="experiences.html">Portugal</a> </a> </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
     <div class="name">
 <br>
 <br>
@@ -35,22 +52,35 @@
  </center>
 
   </div>
-<div class="a"> <center>
-<p>
-     <br>
-     <br>
-     <br>
-  <a href="aboutme.html">A bit more about me</a></center> </p>
-  <br>
-</div>
-<div class="a"> <center>
-  <p>
+<div class="a">
+  <div class="row">
+  <div class="column">
 
-    <a href="experiences.html">My experiences</a>
-    <br>
-    <br>
+       <br>
+    <a href="aboutme.html">About me</a>
+  </div>
+  <div class="column"><br>
+    <div class="dropdown">
+  <button class="dropbtn">Experiences</button>
+  <div class="dropdown-content">
+    <a href="tanzania.html">Tanzania</a>
+    <a href="crru.html">Scotland</a>
+    <a href="experiences.html">Portugal</a>
+  </div>
+</div>
+  <br>
+  <br>
+  </div>
+  <div class="column"><br>
+    <a href="contact.html">Contact</a></div>
+
+
 
   </p>
+</div>
+</div>
+</div>
+</div>
 </div>
   </body>
   </html>
