--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
             <li class="nav-item active">
                 <a class="nav-link" href="aboutme.html">About me</a>
             </li>
-            <li class="nav-item">  <div class="dropdown">
-            <button class="dropbtn">Experiences</button>
-            <div class="dropdown-content">
-              <a href="tanzania.html">Tanzania</a>
-              <a href="crru.html">Scotland</a>
-              <a href="experiences.html">Portugal</a> </a> </div>
+            <li class="nav-item">
+              <a class="nav-link" href="experiences.html">Experiences</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -27,7 +23,6 @@
         </ul>
     </div>
     <div class="name">
-<br>
 <br>
      <h2> <p> <center> Jessica <br> Montabaranom </center> </p> </h2>
 <br>
