--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,22 @@
 <link rel="stylesheet" href="aboutme.css">
 
 <body>
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+<ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+    </li>
+          <li class="nav-item">
+              <a class="nav-link" href="aboutme.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiences.html">Experiences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
   WORK IN PROGRESS
   </body>
   </html>
