--- a/experiences.html
+++ b/experiences.html
@@ -6,6 +6,37 @@
 <link href="css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
 <body>
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+        </li>
+          <li class="nav-item">
+              <a class="nav-link" href="aboutme.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiences.html">Experiences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
   <h2> <b> WORK IN PROGRESS </b> </h2> <br>
+</div>
+<div class="a">
+<div class="row">
+<div class="column">
+<a href="tanzania.html">Tanzania</a></div>
+
+<div class="column"><br>
+
+  <a href="crru.html">Scotland</a> </div>
+
+  <div class="column"><br>
+
+  <a href="portugal.html">Portugal</a></div>
+</div>
+</div>
 </body>
 </html>
