--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+          </li>
             <li class="nav-item active">
                 <a class="nav-link" href="aboutme.html">About me</a>
             </li>
@@ -46,36 +49,6 @@
    <br>
  </center>
 
-  </div>
-<div class="a">
-  <div class="row">
-  <div class="column">
-
-       <br>
-    <a href="aboutme.html">About me</a>
-  </div>
-  <div class="column"><br>
-    <div class="dropdown">
-  <button class="dropbtn">Experiences</button>
-  <div class="dropdown-content">
-    <a href="tanzania.html">Tanzania</a>
-    <a href="crru.html">Scotland</a>
-    <a href="experiences.html">Portugal</a>
-  </div>
-</div>
-  <br>
-  <br>
-  </div>
-  <div class="column"><br>
-    <a href="contact.html">Contact</a></div>
-
-
-
-  </p>
-</div>
-</div>
-</div>
-</div>
 </div>
   </body>
   </html>
