--- a/crru.html
+++ b/crru.html
@@ -6,6 +6,22 @@
 <link href="css/styles.css" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
 <body>
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+        </li>
+          <li class="nav-item">
+              <a class="nav-link" href="aboutme.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="experiences.html">Experiences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
   <h2> <b> WORK IN PROGRESS </b> </h2> <br>
 </body>
 </html>
