toolbars set on all pages

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="aboutme.css">
+<link rel="stylesheet" href="index.css">
 
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -14,7 +14,7 @@
         <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
         </li>
-          <li class="nav-item active">
+          <li class="nav-item">
               <a class="nav-link" href="aboutme.html">About me</a>
           </li>
           <li class="nav-item">
