--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="aboutme.css">
+<link rel="stylesheet" href="index.css">
 
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -25,6 +25,9 @@
           </li>
       </ul>
   </div>
+  <br>
+  <br>
+  <br>
   WORK IN PROGRESS
   </body>
   </html>
