about me update

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="aboutme.css">
 
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -26,12 +26,22 @@
       </ul>
   </div>
   <p> <div> <center>
+    <br>
     <br> A bit more about me <br>
     <br>
-  <img src="IMG_3585.JPG">
+
+  <img src="IMG_2109.JPG">
 </p> </center>
 </div>
 <div class="a">
-  My name is Jessica Montabaranom.
+  <p> <br>
+  My name is Jessica Montabaranom. I am 21 years old and I currently live in the North East of England. I am based in Hull half the year as I am a second year student at the Univeristy of Hull, studying a BSc Marine Biology (Hons).
+</p>
+<p> I have always been an outdoorsy and adventurous person. My family and I travelled and mvoe around a lot when I was younger, and I was lucky enough to discover and fully immerse myself into many different countries and cultures. I am also lucky enough to be bilingual, having an English parent and a French parent, and living in France for 10 years. Despite living the French Alps, I was drawn to the ocean from a young age and grew up in family that was environmentally conscious and spoke openly about climate change.
+</p>
+<p> I've known for a long time that I wanted to help protect the Earth and its oceans, and participate in actions against climate change and in promoting a more sustainable lifestyle.
+</p>
+<p> <span class="marine"> Hopefully this website will help me document my journey and I hope you enjoy browsing through it too.
+</span></p>
 </body>
 </html>
