--- a/experiences.html
+++ b/experiences.html
@@ -22,20 +22,13 @@
           </li>
       </ul>
   </div>
-  <h2> <b> WORK IN PROGRESS </b> </h2> <br>
+  <br>
+  <br>
+  <br>
+ WORK IN PROGRESS  <br>
 </div>
 <div class="a">
-<div class="row">
-<div class="column">
-<a href="tanzania.html">Tanzania</a></div>
 
-<div class="column"><br>
-
-  <a href="crru.html">Scotland</a> </div>
-
-  <div class="column"><br>
-
-  <a href="portugal.html">Portugal</a></div>
 </div>
 </div>
 </body>
