--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
     </div>
     <div class="name">
 <br>
-     <h2> <p> <center> Jessica <br> Montabaranom </center> </p> </h2>
 <br>
-<img src="IMG_1879.JPG">
+      <p> <center> Jessica <br> Montabaranom </center> </p>
 <br>
 <br>
    </div>
 
    <div class="current"> <center>
      <br>
-   <h2> <b> WORK IN PROGRESS </b> </h2> <br>
+     <p>
    Please bear with me while this website is being created.
+</p>
    <br>
    <br>
+   <p>
    Welcome to my portfolio website, where I am putting together my past and current <span class="marine"> marine conservation related experiences</span>.
-   <br>
+ </p>
+ <br>
+ <p>
      I am currently a 2nd year <span class="marine"> Marine Biology student </span> at the University of Hull.
+
+   </p>
    <br>
    <br>
    <br>
