--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
    Welcome to my portfolio website, where I am putting together my past and current <span class="marine"> marine conservation related experiences</span>.
  </p>
  <br>
- <p>
-     I am currently a 2nd year <span class="marine"> Marine Biology student </span> at the University of Hull.
-
+ <p> I am documenting my journey as I get more experiences out in the field and work on my certificates.
    </p>
    <br>
+   <p>
+     Hope you enjoy browsing!
+   </p>
    <br>
-   <br>
+   <p>
+     Jess x
+   </p>
    <br>
  </center>
 
