--- a/aboutme.html
+++ b/aboutme.html
@@ -25,9 +25,9 @@
           </li>
       </ul>
   </div>
-  <p> <div> <center>
+  <p> <div class="title"> <center>
     <br>
-    <br> A bit more about me <br>
+    <br> <kdb>A bit more about me</kdb><br>
     <br>
 
   <img src="IMG_2109.JPG">
