--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </ul>
     </div>
     <div class="name">
+      <img src="coast.jpg">
 <br>
 <br>
       <p> <center> Jessica <br> Montabaranom </center> </p>
