--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     <div class="name">
-      <img src="coast.jpg">
+      <img src="coast.jpeg">
 <br>
 <br>
       <p> <center> Jessica <br> Montabaranom </center> </p>
