--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
   </div>
   <p> <div class="title"> <center>
     <br>
-    <br> <kdb>A bit more about me</kdb><br>
+    <br> A bit more about me<br>
     <br>
 
   <img src="IMG_2109.JPG">
