--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
   <head>
-<link rel="shortcut icon" href="K.png">
-  <title> Jessica Montabaranom </title>
+<link rel="shortcut icon" href="JM.png">
+  <title> Home </title>
 
   </head>
   <link href="css/styles.css" rel="stylesheet">
