logo changed to all pages

--- a/experiences.html
+++ b/experiences.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="L.png">
 <title> About me </title>
 </head>
 <link href="css/styles.css" rel="stylesheet">
