--- a/landingpage.html
+++ b/landingpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-<link rel="shortcut icon" href="K.png">
+<link rel="shortcut icon" href="L.png">
   <title> Jessica Montabaranom </title>
 
   </head>
@@ -11,8 +11,7 @@
   <body>
     <div class="container">
 
-      <img src="Jessica Montabaranom Student Marine Bioligist.png" class="image" style="width:100%" align="middle">
-    <div class="middle">
+
     <div class="a"> <center>
          <br>
          <br>
