--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="shortcut icon" href="K.png">
+  <link rel="shortcut icon" href="L.png">
 <title> A bit more about me </title>
 </head>
 
