--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-<link rel="shortcut icon" href="JM.png">
+<link rel="shortcut icon" href="L.png">
   <title> Home </title>
 
   </head>
