--- a/experiences.html
+++ b/experiences.html
@@ -10,10 +10,10 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Profile</a>
         </li>
           <li class="nav-item">
-              <a class="nav-link" href="aboutme.html">About me</a>
+              <a class="nav-link" href="aboutme.html">Abilities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="experiences.html">Experiences</a>
