--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
 <link rel="shortcut icon" href="L.png">
-  <title> Home </title>
+  <title> Profile </title>
 
   </head>
   <link href="css/styles.css" rel="stylesheet">
@@ -12,10 +12,10 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Profile</a>
           </li>
             <li class="nav-item active">
-                <a class="nav-link" href="aboutme.html">About me</a>
+                <a class="nav-link" href="aboutme.html">Abilities</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="experiences.html">Experiences</a>
