update front page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="name">
 <br>
 <br>
-      <p> <center> Jessica <br> Montabaranom </center> </p>
+      <p> <center> Hey <br> I'm Jessica Montabaranom <br> and welcome to my website! </p>
 <br>
 <br>
    </div>
@@ -56,6 +56,9 @@
    </p>
    <br>
  </center>
+
+</div>
+<div class="bottom">
 
 </div>
   </body>
