--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <br>
    <br>
    <p>
-   Welcome to my portfolio website, where I am putting together my past and current <span class="marine"> marine conservation related experiences</span>.
+   Welcome to my portfolio, where I am putting together my past and current <span class="marine"> marine conservation related experiences</span>.
  </p>
  <br>
  <p> I am documenting my journey as I get more experiences out in the field and work on my certificates.
