--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="name">
 <br>
 <br>
-      <p> <center> Hey <br> I'm Jessica Montabaranom <br> and welcome to my website! </p>
+      <p> <center> Hey there <br> I'm Jessica Montabaranom <br> fellow Marine Biologist <br> climate change activist <br> and cetacean enthusiast </p>
 <br>
 <br>
    </div>
