--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="name">
 <br>
 <br>
-      <p> <center> Marine Biologist <br> advocate for marine conservation <br> climate change activist <br> </p>
+      <p> <center> marine biologist <br> advocate for marine conservation <br> climate change activist <br> </p>
 <br>
 <br>
    </div>
