--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <a class="nav-link" href="index.html">Profile</a>
           </li>
             <li class="nav-item active">
-                <a class="nav-link" href="aboutme.html">Skills</a>
+                <a class="nav-link" href="aboutme.html">Abilities</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="experiences.html">Experiences</a>
