--- a/index.html
+++ b/index.html
@@ -36,26 +36,9 @@
    <div class="current"> <center>
      <br>
      <p>
-   Please bear with me while this website is being created.
-</p>
-   <br>
-   <br>
-   <p>
-   Welcome to my portfolio, where I am putting together my past and current <span class="marine"> marine conservation related experiences</span>.
- </p>
- <br>
- <p> I am documenting my journey as I get more experiences out in the field and work on my certificates.
-   </p>
-   <br>
-   <p>
-     Hope you enjoy browsing!
-   </p>
-   <br>
-   <p>
-     Jess x
-   </p>
-   <br>
- </center>
+   About me:
+
+</p> 
 
 </div>
 <div class="bottom">
