--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <br>
    </div>
 
-   <div class="current"> <center>
+   <div class="current">
      <br>
      <p>
    About me:
 
-</p> 
+</p>
 
 </div>
 <div class="bottom">
