--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
      <br>
      <p>
    About me:
+   <br>
+   Jessica Montabaranom
+   <Br>
+   21
+   <br>
+   going into my final year of BSc Marine Biology at the University of Hull
+   <br>
+   adventurer, traveler, diver, animal lover
 
 </p>
 
