--- a/aboutme.html
+++ b/aboutme.html
@@ -27,19 +27,14 @@
   </div>
   <p> <div class="title"> <center>
     <br>
-    <br> A bit more about me<br>
+    <br> WORK IN PROGRESS <br>
     <br>
 
-  <img src="IMG_2109.JPG">
+  <img src="">
 </p> </center>
 </div>
 <div class="a">
-  <p> <br>
-  My name is Jessica Montabaranom. I am 21 years old and I currently live in the North East of England. I am based in Hull half the year as I am a second year student at the University of Hull, studying a BSc Marine Biology (Hons).
-</p>
-<p> I have always been an outdoorsy and adventurous person. My family and I travelled and moved around a lot when I was younger, and I was lucky enough to discover and fully immerse myself into many different countries and cultures. I am also lucky enough to be bilingual, having an English parent and a French parent, and living in France for 10 years. Despite living the French Alps, I was drawn to the ocean from a young age and grew up in family that was environmentally conscious and spoke openly about climate change.
-</p>
-<p> I've known for a long time that I wanted to help protect the Earth and its oceans, and participate in actions against climate change and in promoting a more sustainable lifestyle.
-</p>
+</div>
+
 </body>
 </html>
