--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="aboutme.css">
+<link rel="stylesheet" href="index.css">
 
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -25,9 +25,9 @@
           </li>
       </ul>
   </div>
-  <p> <div class="title"> <center>
+  <p> <div class="title">
     <br>
-    <br> WORK IN PROGRESS <br>
+    <br> WORK IN PROGRESS<br>
     <br>
 
   <img src="">
