--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
    </div>
 
    <div class="current">
+     <div class="row">
+       <div class="side">
      <br>
      <p>
    About me:
@@ -43,13 +45,14 @@
    21
    <br>
    going into my final year of BSc Marine Biology at the University of Hull
-  
+
 
 </p>
-
 </div>
-<div class="bottom">
-
+</div>
+</div>
+<div class="footer">
+social media
 </div>
   </body>
   </html>
