--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 </div>
 </div>
 <div class="footer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<a href="https://www.facebook.com/jessica.montabaranom" class="fa fa-facebook"></a>
+
 social media
+
 </div>
   </body>
   </html>
