--- a/index.html
+++ b/index.html
@@ -34,22 +34,16 @@
    </div>
 <div class="row">
    <div class="current">
-       <div class="side">
+       <div class="side"> <center>
      <p>
-   About me:
-   <br>
-   Jessica Montabaranom
-   <Br>
-   21
-   <br>
-   going into my final year of BSc Marine Biology at the University of Hull
-</p>
+  Jessica Montabaranom
+</p></center>
 </div>
 </div>
 
 <div class="main">
   <p>
-  x x x
+  21 years old <br> North East England
 </p>
 </div>
 </div>
