--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
        <div class="side"> <center>
      <p>
   Jessica Montabaranom
+  <img src="IMG_3302.JPG" alt="Photo of Jessica"
 </p></center>
 </div>
 </div>
 
 <div class="main">
   <p>
-  21 years old <br> North East England
+  What do I do?
 </p>
 </div>
 </div>
