--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
    </div>
 <div class="row">
    <div class="current">
-       <div class="side"> <center>
+       <div class="side">
      <p>
   Jessica Montabaranom
   <br>
-  <img src="IMG_3302.JPG" alt="Photo of Jessica"
-</p></center>
+  <img src="IMG_3302.JPG" alt="Photo of Jessica">
+  <br>
+  Marine Biology Student
+</p>
 </div>
 </div>
 
