--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
 <div class="main">
   <p>
-  Work
+  work
 </p>
 </div>
 </div>
 <div class="footer"> <center>
-  My social media
+  my social media
   <br>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <a href="https://www.facebook.com/jessica.montabaranom" class="fa fa-facebook"></a>
