--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <br>
   <img src="IMG_3302.JPG" alt="Photo of Jessica">
   <br>
-  Marine Biology Student
+  marine biology student
 </p>
 </div>
 </div>
