--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 </div>
 <div class="footer"> <center>
-  my social media
+  <h4> my social media </h4>
   <br>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <a href="https://www.facebook.com/jessica.montabaranom" class="fa-facebook"></a>
