--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
   <img src="IMG_3302.JPG" alt="Photo of Jessica">
   <br>
   marine biology student
+  <br>
+  21
+  <br>
+  based in north east england
 </p>
 </div>
 </div>
