--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <head>
 <link rel="shortcut icon" href="L.png">
   <title> Profile </title>
-
+<style>
+box-sizing: border-box;
+</style> 
   </head>
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
