--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 <div class="main">
   <p>
     I am an enthusiastic and highly motivated second year Marine Biology student at the University of Hull. I am confident in undertaking field work and laboratory projects through the experiences university and volunteering has offered me. I have demonstrated leadership skills as well as working efficiently in a team throughout my course. I am a proactive advocate to limit climate change and for marine conservation.
-  <br> Throughout my course, I have developed a solid understanding of how species within marine ecosystems interact and the physical dynamic processes oceans and marine ecosystems undergo. Human impact and climate change have been part of my studies and I have learned how these are changing and impacting the oceans. Laboratory sessions have provided me with an enhanced knowledge of microscopes and excellent science communicating skills through data analysis with R and reports.
+  </p>
+  <p> Throughout my course, I have developed a solid understanding of how species within marine ecosystems interact and the physical dynamic processes oceans and marine ecosystems undergo. Human impact and climate change have been part of my studies and I have learned how these are changing and impacting the oceans. Laboratory sessions have provided me with an enhanced knowledge of microscopes and excellent science communicating skills through data analysis with R and reports.
 
 </p>
 </div>
