--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
      <p>
   Jessica Montabaranom
   <br>
-  <br>
+  <br> <center>
   <img src="IMG_3302.JPG" alt="Photo of Jessica">
-  <br>
+</center><br>
   marine biology student
   <br>
   21
