--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <br>
    </div>
 <div class="row">
+  <div class="current">
        <div class="side">
      <p>
   Jessica Montabaranom
@@ -45,6 +46,7 @@
   <br>
   north east england
 </p>
+</div>
 </div>
 
 <div class="main">
