--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   Jessica Montabaranom
   <br>
   <br> <center>
-  <img src="IMG_3585.JPG" alt="Photo of Jessica">
+  <img src="portrait.jpg" alt="Photo of Jessica">
 </center><br>
   marine biology student
   <br>
