--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 <div class="footer"> <center>
   my social media
   <br>
+  <div class="fa">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <a href="https://www.facebook.com/jessica.montabaranom" class="fa fa-facebook"></a>
   <a href="https://www.linkedin.com/in/jessica-montabaranom-9792a4182/" class="fa fa-linkedin"></a>
 </center>
+</div>
 </div>
   </body>
   </html>
