--- a/index.html
+++ b/index.html
@@ -49,9 +49,22 @@
 
 <div class="main">
   <p>
-    I am an enthusiastic and highly motivated second year Marine Biology student at the University of Hull. I am confident in undertaking field work and laboratory projects through the experiences university and volunteering has offered me. I have demonstrated leadership skills as well as working efficiently in a team throughout my course. I am a proactive advocate to limit climate change and for marine conservation.
-  </p>
-  <p> Throughout my course, I have developed a solid understanding of how species within marine ecosystems interact and the physical dynamic processes oceans and marine ecosystems undergo. Human impact and climate change have been part of my studies and I have learned how these are changing and impacting the oceans. Laboratory sessions have provided me with an enhanced knowledge of microscopes and excellent science communicating skills through data analysis with R and reports.
+  My name is Jessica Montabaranom and I am currently going into my third year of BSc Marine Biology at the University of Hull.
+</p>
+<p>
+  I created this website to document my journey of becoming a marine biologist and increasingly passionate about the oceans and its wildlife. I have a particular interest in marine mammals and seize every opportunity to learn more about them and spend time with them. I am also very interested in protecting the oceans and their conservation, as I believe humans would not survive without them. I actively promote a more sustainable lifestyle and try to develop my knowledge in terms of the causes, short-term and long-term effects of climate change.
+</p>
+<p>
+  I have been lucky enough to have opportunities to discover the marine wildlife and aid in conservation in the UK and abroad. You can check these out in my experiences page.
+</p>
+<p>
+  This website is still under development and may not be completely finished when you’re browsing through it. It will always be a work in progress as I plan on gaining more experiences and documenting further skills I improve on and obtain.
+</p>
+<p>
+  If you have any questions, do not hesitate to contact with the link provided on the contact page.
+</p>
+<p>
+  I hope you enjoy browsing through my website, and I hope it might inspire you to promote marine conservation and learn a little more about the oceans too.
 </p>
 </div>
 </div>
