--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="main">
   <p>
-  My name is Jessica Montabaranom and I am currently going into my third year of BSc Marine Biology at the University of Hull.
+  My name is Jessica Montabaranom and I am currently going into my third year of BSc Marine Biology at the <a href="https://www.hull.ac.uk/index.aspx"> University of Hull</a>.
 </p>
 <p>
   After taking a course in coding in my second year at university, I decided to create my own website as a portfolio to document my journey of becoming a marine biologist and increasingly passionate about the oceans and its wildlife. I have a particular interest in marine mammals and seize every opportunity to learn more about them and spend time with them. I am also very interested in protecting the oceans and their conservation, as I believe humans would not survive without them. I actively promote a more sustainable lifestyle and try to develop my knowledge on the causes, short-term and long-term effects of climate change.
