--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 <div class="main">
   <p>
-  My name is Jessica Montabaranom and I am currently going into my third year of BSc Marine Biology at the <a href="https://www.hull.ac.uk/index.aspx"> University of Hull</a>.
+  My name is Jessica Montabaranom and I am currently going into my third year of BSc Marine Biology at the <b href="https://www.hull.ac.uk/index.aspx"> University of Hull</b>.
 </p>
 <p>
   After taking a course in coding in my second year at university, I decided to create my own website as a portfolio to document my journey of becoming a marine biologist and increasingly passionate about the oceans and its wildlife. I have a particular interest in marine mammals and seize every opportunity to learn more about them and spend time with them. I am also very interested in protecting the oceans and their conservation, as I believe humans would not survive without them. I actively promote a more sustainable lifestyle and try to develop my knowledge on the causes, short-term and long-term effects of climate change.
 </p>
 <p>
-  I have been lucky enough to have opportunities to discover the marine wildlife and aid in conservation in the UK and abroad. You can check these out in my <a href="https://jessmontabaranom.github.io/portfolio/experiences.html">experiences page</a>.
+  I have been lucky enough to have opportunities to discover the marine wildlife and aid in conservation in the UK and abroad. You can check these out in my <b href="https://jessmontabaranom.github.io/portfolio/experiences.html">experiences page</b>.
 </p>
 <p>
   This website is still under development and may not be completely finished when you’re browsing through it. It will always be a work in progress as I plan on gaining more experiences and documenting further skills I improve on and obtain.
