--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="row">
        <div class="side">
      <p>
-  <span class= "me"> Jessica Montabaranom </span>
+  <span class= "me"> jessica montabaranom </span>
   <br>
   <br> <center>
   <img src="portrait.jpg" alt="Photo of Jessica">
