--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <a href="https://www.facebook.com/jessica.montabaranom" class="fa fa-facebook"></a>
   <a href="https://www.linkedin.com/in/jessica-montabaranom-9792a4182/" class="fa fa-linkedin"></a>
-  <a href="https://www.instagram.com/jessmontabaranom/?hl=en" class="fa fa-instagram"></a>
+  <a href="https://www.instagram.com/jlmontabaranom/?hl=en" class="fa fa-instagram"></a>
 </center>
 </div>
   </body>
