--- a/experiences.html
+++ b/experiences.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <link rel="shortcut icon" href="L.png">
-<title> About me </title>
+<title> Experiences </title>
 </head>
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="experiences.css">
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
@@ -31,6 +31,14 @@
 <div class="a">
 
 </div>
+<div class="footer"> <center>
+  my social media
+  <br>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <a href="https://www.facebook.com/jessica.montabaranom" class="fa fa-facebook"></a>
+  <a href="https://www.linkedin.com/in/jessica-montabaranom-9792a4182/" class="fa fa-linkedin"></a>
+  <a href="https://www.instagram.com/jlmontabaranom/?hl=en" class="fa fa-instagram"></a>
+</center>
 </div>
 </body>
 </html>
