--- a/experiences.html
+++ b/experiences.html
@@ -23,11 +23,13 @@
           </li>
       </ul>
   </div>
-  <br>
-  <br>
-  <br>
- WORK IN PROGRESS  <br>
-</div>
+  <div class="name">
+    <br>
+    <br>
+    <p> <center> experiences <br> marine conservation <br> marine mammals </p>
+      <br>
+      <br>
+  </div>
 <div class="a">
 
 </div>
