--- a/aboutme.html
+++ b/aboutme.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <link rel="shortcut icon" href="L.png">
-<title> A bit more about me </title>
+<title> Abilities</title>
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="aboutme.css">
 
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -25,16 +25,13 @@
           </li>
       </ul>
   </div>
-  <p> <div class="title">
+  <div class="name">
     <br>
-    <br> WORK IN PROGRESS<br>
     <br>
-
-  <img src="">
-</p> </center>
-</div>
-<div class="a">
-</div>
+    <p> <center> education <br> certificates <br> abilities </p>
+      <br>
+      <br>
+  </div>
 
 </body>
 </html>
