--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 </head>
 
 <link href="css/styles.css" rel="stylesheet">
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="contact.css">
 
 <body>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -24,10 +24,12 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
       </ul>
-  </div>
-  <br>
-  <br>
-  <br>
-  WORK IN PROGRESS
+      <div class="name">
+        <br>
+        <br>
+        <p> <center> contact me </p>
+          <br>
+          <br>
+      </div>
   </body>
   </html>
