--- a/contact.html
+++ b/contact.html
@@ -31,5 +31,14 @@
           <br>
           <br>
       </div>
+      <div class="footer"> <center>
+        my social media
+        <br>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <a href="https://www.facebook.com/jessica.montabaranom" class="fa fa-facebook"></a>
+        <a href="https://www.linkedin.com/in/jessica-montabaranom-9792a4182/" class="fa fa-linkedin"></a>
+        <a href="https://www.instagram.com/jlmontabaranom/?hl=en" class="fa fa-instagram"></a>
+      </center>
+      </div>
   </body>
   </html>
